fix: metric tabs look bad on small screens

--- a/src/containers/Tenant/Diagnostics/TenantOverview/TenantOverview.scss
+++ b/src/containers/Tenant/Diagnostics/TenantOverview/TenantOverview.scss
@@ -1,6 +1,7 @@
 @use '../../../../styles/mixins.scss';
 
 .tenant-overview {
+    min-width: 1000px;
     height: 100%;
     padding-bottom: 20px;
 
